<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.doggyquiz.MainActivity">
    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LayoutMargins"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkboxImage"
            android:src="@drawable/question_three"
            style="@style/Images" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkbox_question_textView"
            style="@style/Questions"
            android:text="@string/questionThree"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/SelectionButtons">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkboxButtonOne"
                android:text="@string/questionThreeAnswerOne"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkboxButtonTwo"
                android:text="@string/questionThreeAnswerTwo"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkboxButtonThree"
                android:text="@string/questionThreeAnswerThree"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkboxButtonFour"
                android:text="@string/questionThreeAnswerFour"/>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Buttons"
            android:text="@string/submitButton"
            android:id="@+id/nextButtonCheckbox" />

    </LinearLayout>
</ScrollView>